--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "react-native-device-info",
-  "version": "7.0.2",
+  "version": "7.3.1",
   "description": "Get device information using react-native",
   "react-native": "src/index.ts",
   "types": "lib/typescript/index.d.ts",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
   "files": [
+    "__tests__/",
     "android/",
     "ios/",
     "lib/",
@@ -14,29 +15,32 @@
     "jest/",
     "web/",
     "windows/",
-    "RNDeviceInfo.podspec"
+    "RNDeviceInfo.podspec",
+    "babel.config.js",
+    "jest.config.js",
+    "jest.setup.ts"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/react-native-community/react-native-device-info"
+    "url": "https://github.com/react-native-device-info/react-native-device-info"
   },
-  "homepage": "https://github.com/react-native-community/react-native-device-info#readme",
+  "homepage": "https://github.com/react-native-device-info/react-native-device-info#readme",
   "scripts": {
-    "analyze": "npm run ts-check && npm run flow-check",
+    "analyze": "yarn ts-check && yarn flow-check",
     "flow-check": "npx flow-bin check-contents < src/index.js.flow",
     "ts-check": "npx tsc --noEmit",
     "clean": "cd example && npx react-native-clean-project --keep-node-modules --remove-iOS-build --remove-iOS-pods --remove-android-build --clean-android-project --keep-brew --keep-pods && \\rm -fr ios/Pods",
-    "dev-sync": "npm run build && cp -r *podspec lib windows android ios src jest example/node_modules/react-native-device-info/",
+    "dev-sync": "yarn build && cp -r *podspec lib windows android ios src jest example/node_modules/react-native-device-info/",
     "lint": "npx eslint ./ --ignore-pattern example --ignore-pattern node_modules --fix --quiet",
-    "shipit": "npm run clean && np",
+    "shipit": "yarn clean && np",
     "test": "jest",
-    "precommit": "lint-staged && npm run analyze",
+    "precommit": "lint-staged && yarn analyze",
     "build": "bob build",
     "prepare": "bob build"
   },
   "lint-staged": {
     "*.ts": [
-      "npm run lint",
+      "yarn lint",
       "git add"
     ]
   },
@@ -76,23 +80,26 @@
     "@react-native-community/bob": "^0.16.2",
     "@react-native-community/eslint-config": "2.0.0",
     "@testing-library/react-hooks": "^3.4.2",
-    "@types/jest": "^26.0.15",
-    "@types/react": "^16.9.50",
+    "@types/jest": "^26.0.18",
+    "@types/react": "16.14.2",
     "@types/react-native": "^0.63.23",
-    "eslint": "^7.10.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.3.0",
+    "eslint": "^7.15.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "husky": "^4.3.5",
     "jest": "^26.6.0",
-    "lint-staged": "^10.4.0",
+    "lint-staged": "^10.5.3",
     "metro-react-native-babel-preset": "^0.63.0",
-    "np": "^6.5.0",
-    "prettier": "^2.1.2",
+    "np": "^7.0.0",
+    "prettier": "^2.2.1",
     "react": "16.13.1",
-    "react-native": "^0.62.2",
-    "react-native-windows": "^0.62.5",
+    "react-native": "^0.63.4",
+    "react-native-windows": "^0.63.13",
     "react-test-renderer": "^17.0.1",
     "ts-jest": "^26.4.1",
-    "typescript": "^4.0.3"
+    "typescript": "^4.1.2"
+  },
+  "resolutions": {
+    "@types/react": "16.14.2"
   },
   "eslintConfig": {
     "extends": "@react-native-community"
